--- a/notebooks/modify_datasets/distribute_yaml_config_hsi/config.seabee.yaml
+++ b/notebooks/modify_datasets/distribute_yaml_config_hsi/config.seabee.yaml
@@ -13,14 +13,14 @@ project: Massimal
 massipipe_options:
   create_products:
     radiance: true
-    radiance_sgc: true
+    radiance_gc: true
     reflectance: true
-    reflectance_sgc: true
+    reflectance_gc: true
   create_mosaics:
     radiance: false
-    radiance_sgc: false
+    radiance_gc: false
     reflectance: false
-    reflectance_sgc: false
-  sgc:
+    reflectance_gc: false
+  glint_correction:
     reference_image_numbers: null
-    reflectance_sgc_method: flat_spec
+    reflectance_gc_method: flat_spec
