--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ build-backend = "hatchling.build"
 name = "massipipe"
 version = "0.1.0"
 dependencies = [
+  "matplotlib",
   "numpy",
   "pyproj",
+  "pyyaml",
   "rasterio",
   "spectral",
   "scipy",
@@ -31,7 +33,6 @@ classifiers = [
 [project.optional-dependencies]
 dev = [
   "jupyterlab",
-  "matplotlib",
   "pytest",
   "ruff",
   "numpydoc-linter",
