Updating quick start and adding code copy functionality

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ site_description: MassiPipe - a data processing pipeline for hyperspectral data 
 
 theme:
   name: "material"
+  features:
+    - content.code.copy
 
 repo_url: https://github.com/mh-skjelvareid/massipipe
 
@@ -30,3 +32,10 @@ nav:
 markdown_extensions:
   - toc:
       toc_depth: 2
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
