Add development notebook folders to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,5 @@ cython_debug/
 # Specific files and folders to ignore
 tests/example_data/massimal_larvik_olbergholmen_202308301001-test_hsi/
 notebooks/debugging/
+notebooks/develop_features/
+notebooks/develop_tests/
