--- a/notebooks/modify_datasets/distribute_yaml_config_hsi/config.seabee.yaml
+++ b/notebooks/modify_datasets/distribute_yaml_config_hsi/config.seabee.yaml
@@ -11,16 +11,70 @@ spectrum_type: HSI
 creator_name: Martin H. Skjelvareid
 project: Massimal
 massipipe_options:
-  create_products:
-    radiance: true
-    radiance_gc: true
-    reflectance: true
-    reflectance_gc: true
-  create_mosaics:
-    radiance: false
-    radiance_gc: false
-    reflectance: false
-    reflectance_gc: false
-  glint_correction:
+  general: 
+    rgb_wl: null
+  quicklook:
+    create: true
+    overwrite: false
+    percentiles: null
+  imu_data:
+    create: true
+    overwrite: true
+  geotransform:
+    create: true
+    overwrite: true
+    camera_opening_angle_deg: null
+    pitch_offset_deg: null
+    roll_offset_deg: null
+    altitude_offset_m: null
+    utm_x_offset_m: null
+    utm_y_offset_m: null
+  radiance:
+    create: true
+    overwrite: false
+    set_saturated_pixels_to_zero: true
+    add_map_info: true
+  radiance_rgb:
+    create: true
+    overwrite: false
+  radiance_gc:
+    create: true
+    overwrite: false
+    smooth_spectra: false
+    subtract_dark_spec: true
     reference_image_numbers: null
-    reflectance_gc_method: flat_spec
+    reference_image_ranges: null
+  radiance_gc_rgb:
+    create: true
+    overwrite: false
+  irradiance:
+    create: true
+    overwrite: false 
+  reflectance:
+    create: true
+    overwrite: false 
+    wl_min: null
+    wl_max: null
+    fwhm_irradiance_smoothing: null
+    smooth_spectra: false
+    add_map_info: true
+  reflectance_gc: 
+    create: true
+    overwrite: false
+    smooth_spectra: true
+    wl_min: null
+    wl_max: null
+  reflectance_gc_rgb:
+    create: true
+    overwrite: false
+  mosaic:
+    overview_factors: null
+    radiance_rgb:
+      create: true
+      overwrite: true
+    radiance_gc_rgb: 
+      create: true
+      overwrite: true
+    reflectance_gc_rgb:
+      create: true
+      overwrite: true
