Adapting geotransform processing to YAML config

--- a/notebooks/modify_datasets/distribute_yaml_config_hsi/config.seabee.yaml
+++ b/notebooks/modify_datasets/distribute_yaml_config_hsi/config.seabee.yaml
@@ -29,6 +29,7 @@ massipipe_options:
     altitude_offset_m: null
     utm_x_offset_m: null
     utm_y_offset_m: null
+    assume_square_pixels: true
   radiance:
     create: true
     overwrite: false
