Debug / update on glint correction and setting neg. values to zero.

--- a/notebooks/modify_datasets/distribute_yaml_config_hsi/config.seabee.yaml
+++ b/notebooks/modify_datasets/distribute_yaml_config_hsi/config.seabee.yaml
@@ -43,6 +43,7 @@ massipipe_options:
     overwrite: false
     smooth_spectra: false
     subtract_dark_spec: true
+    set_negative_values_to_zero: true
     reference_image_numbers: null
     reference_image_ranges: null
   radiance_gc_rgb:
