Adding option to write irradiance to radiance header

--- a/notebooks/modify_datasets/distribute_yaml_config_hsi/config.seabee.yaml
+++ b/notebooks/modify_datasets/distribute_yaml_config_hsi/config.seabee.yaml
@@ -35,6 +35,7 @@ massipipe_options:
     overwrite: false
     set_saturated_pixels_to_zero: true
     add_map_info: true
+    add_irradiance_to_header: true
   radiance_rgb:
     create: true
     overwrite: false
