--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,10 +24,17 @@ plugins:
 
 nav:
   - Introduction: index.md
-  - Pipeline reference: pipeline_ref.md
-  - Processors reference: processors_ref.md
-  - Utilities reference: utils_ref.md
   - Example Usage: example_usage.md
+  - Configuration reference: config_ref.md
+  - Pipeline reference: pipeline_ref.md
+  - Quicklook reference: quicklook_ref.md
+  - Radiance calibration reference: radiance_ref.md
+  - Irradiance calibration reference: irradiance_ref.md
+  - Reflectance calculation reference: reflectance_ref.md
+  - IMU data processing and simple georeferencing reference: georeferencing_ref.md
+  - Mosaicing reference: mosaic_ref.md
+  - Utilities reference: utils_ref.md
+
 
 markdown_extensions:
   - toc:
