--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,4 @@ tests/example_data/massimal_larvik_olbergholmen_202308301001-test_hsi/
 notebooks/debugging/
 notebooks/develop_features/
 notebooks/prelim_tests/
+notebooks/modify_datasets/
