Adding folder for test notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -163,6 +163,7 @@ cython_debug/
 
 # Specific files and folders to ignore
 tests/example_data/massimal_larvik_olbergholmen_202308301001-test_hsi/
+tests/test_notebooks/
 notebooks/debugging/
 notebooks/develop_features/
 notebooks/prelim_tests/
