--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ plugins:
           members_order: source
           heading_level: 2
           show_root_heading: false
-          show_source: false
+          show_source: true
           show_signature: true
 
 nav:
